--- a/schedule.html
+++ b/schedule.html
@@ -4,13 +4,14 @@
 <head>
     <title>Schedule | Regional Food Events</title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
-  <script src="dist/main.bundle.js" defer ></script>
+  <script src="dist/schedule.bundle.js" defer ></script>
 </head>
 
 <body class="schedule-bg">
